--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,40 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+:root {
+  --color-primary:  #a683e3; /*#e4e9fd*/
+  --color-danger: #e53f3c ; 
+  --color-success: #19cb98 ; 
+  --color-warning: #ffaa46; 
+  --color-white: #fff; 
+  --color-info-dark: #7d8da1 ; 
+  --color-info-light: #dce1ed; 
+  --color-dark: #363949; 
+  --color-light: rgba(132, 139, 200, 0.18); 
+  --color-primary-variant:#111e88 ; 
+  --color-dark-variant: #677483; 
+  --color-background: #e4e9fd ; 
+
+  --card-border-radius: 2rem;
+  --border-radius-1: 0.4rem;
+  --border-radius-2: 0.8rem;
+  --border-radius-3: 1.2rem;
+
+  --card-padding: 1.8rem;
+  --padding: 1.2rem;
+
+  --box-shadow: 0.2rem 0.3rem var(--color-light);
+
+}
+
+/*---------------------------------Dark THeme variables---------------------------*/
+
+.dark-theme-variables {
+  --color-backbround: #181a1e;
+  --color-white: #202528;
+  --color-dark: #edeffd;
+  --color-dark-variant: #a3bdcc;
+  --color-light: rgba(0, 0, 0, 0.4);
+  --box-shadow: 0 2rem 3rem var(--color-light);
+}
 
 
 a.button {
@@ -119,6 +155,17 @@ form.sign-up-business-form{
     line-height: 50px;
     color: #acacac;
     font-size: 1.1rem;
+}
+
+.service-input-container{
+  display: block;
+}
+
+.service-input-container button{
+  border-radius: var(--border-radius-1);
+  background-color: var(--color-primary);
+  height: 30px;
+  width: 39px;
 }
 
 .input-field input{
