--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -74,7 +74,7 @@ body, input {
     content: '';
     position: absolute;
     width: 1800px;
-    height: 2000px;
+    height: 2500px;
     border-radius: 0%;
     background-image: url('/img/Getting_started.jpeg');
     top: -10%;
@@ -146,7 +146,7 @@ form.sign-up-business-form{
     margin: 7px 0;
     border-radius: 55px;
     display: grid;
-    grid-template-columns: 15% 85%;
+    grid-template-columns: 15% 70% 15%;
     padding: 0 .4rem;
 }
 
@@ -261,7 +261,7 @@ form.sign-up-business-form{
 }
 
 .panel .content{
-    color: #2D3748;
+    color: darkorange;
     transition: .9s .6s ease-in-out;
 }
 .panel h3{
@@ -278,12 +278,12 @@ form.sign-up-business-form{
 .btn.transparent{
     margin-bottom: 5px;
     background: none;
-    border: 2px solid #FF8C38;
+    border: 2px solid darkorange;
     width: 224px;
     height: 41px;
     font-weight: 600;
     font-size: 0.8rem;
-    color:#FF8C38
+    color:darkorange;
 }
 
 .sign-up-btns {
